# simavr_parts

./: CMakeLists.txt  README.md  mcp2515_def.h  mcp2515_virt.c  mcp2515_virt.h
